--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server & open http://localhost:8080/",
     "lint": "eslint src/** src/**/**; exit 0",
     "fix": "eslint src/** src/**/** --fix; exit 0",
-    "bash": "./B.sh"
+    "bash": "./B.sh",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
